# parallel-vk

hw1/: CMakeLists.txt  README.md  main.cpp  main.cpp.s
hw2/: CMakeLists.txt  README.md  main.cpp
hw3/: CMakeLists.txt  README.md  main.cpp
hw4/: CMakeLists.txt  README.md  fine_intset.cpp  fine_intset.h  iintset.h  lazy_intset.cpp  lazy_intset.h  main.cpp  naive_intset.cpp  naive_intset.h  optimistic_intset.cpp  optimistic_intset.h
hw5/: CMakeLists.txt  README.md  TASK.md  bruteforce_engine.cpp  bruteforce_engine.h  hasher.cpp  hasher.h  hashrate_reader.cpp  hashrate_reader.h  keyspace.cpp  keyspace.h  main.cpp  protocol.cpp  protocol.h  signal_manager.cpp  signal_manager.h  task.h  tcp_client.cpp  tcp_client.h
hw5/tests/e2e/: common.sh  e2e_server.py  run_all.sh  test_hello_done.sh  test_invalid_task_range.sh  test_sigterm_during_bruteforce.sh  test_task_found.sh  test_task_not_found.sh  test_wait_done.sh
hw5/tests/e2e/scenarios/: hello_done.json  invalid_server_message.json  invalid_task_range.json  sigterm_during_bruteforce.json  task_found.json  task_not_found.json  wait_done.json
hw6/: README.md  build86.sh  buildarm.sh  main.cpp
hw7/: README.md  main.cpp  measure.sh
